# 2025Winter_4th

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  run_ingestion.sh  test_upstage_direct.py
backend/: Dockerfile  alembic.ini  manual_oauth.py  pyproject.toml  requirements.txt  test_drive.py  test_upstage.py
backend/alembic/: env.py
backend/alembic/versions/: 001_chunk_event_mapping.py  19ffcf5b4fe3_real_initial_create.py  f6cdfd68914e_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  database.py  oauth.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  chat.py  document.py  embedding.py  event.py  reference.py
backend/app/pipeline/: __init__.py  step_01_ingest.py  step_02_classify.py  step_03_parse.py  step_04_preprocess.py  step_05_chunk.py  step_06_enrich.py  step_07_embed.py
backend/app/schemas/: __init__.py  calendar.py  calendar_dto.py  chat.py  chat_dto.py  features_dto.py  handover_dto.py  minutes.py  minutes_dto.py  rag.py  rag_dto.py  task_dto.py
backend/app/services/: ingestion.py  text_utils.py
backend/app/tasks/: __init__.py  celery_app.py  document.py  features.py  (+2 more)
backend/docs/: rag_pipeline.md
backend/scripts/: fix_year_2025.py  interactive_chat.py  migrate_drive_ids.py  pipeline_runner.py  rollback_drive_ids.py  run_full_cycle_test.sh  test_drive_connection.py  test_import.py
backend/scripts_backup/: pipeline_runner.py
backend/tests/: __init__.py  conftest.py  test_e2e_scenarios.py
(+126 files in other folders)
